fix: dark mode when the app is light mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,15 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 56, 30, 112;
+  --background-start-rgb: 248, 243, 230;
+  --background-end-rgb: 248, 243, 230;
+}
+
+.dark {
+  --foreground-rgb: 234, 247, 223;
+  --background-start-rgb: 57, 57, 57;
+  --background-end-rgb: 57, 57, 57;
 }
 
 @media (prefers-color-scheme: dark) {
